*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,29 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (September 14, 2009, 8:31 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=86248">Bug 86248</a>. [Commands] request: ctrl+pageup/down action doesn't have item in preferences/keys (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=89606">Bug 89606</a>. [Viewers] Remove protected API added to support prototype of grouping by working sets (WONTFIX)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=226336">Bug 226336</a>. [progress] DeferredTreeContentManager update listener misleading (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=229294">Bug 229294</a>. [Progress] Layout problems for items in DetailedProgressViewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=231619">Bug 231619</a>. [PropertiesDialog] Open up the API for org.eclipse.ui.internal.dialogs.PropertyDialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=251317">Bug 251317</a>. [Markers] [tasks view] Preferences page do not show names both of  "Completed" and "Priority" colums in the table (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272474">Bug 272474</a>. [Markers] Problem view's Hide/Show columns preferences dont work correctly (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272564">Bug 272564</a>. [PropertiesView] need a mechanism for views to 'opt out' of interactions with the property view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275018">Bug 275018</a>. [Markers] Problems View / Configure Contents dialog should support rename (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287103">Bug 287103</a>. [CommonNavigator] contentServiceLabelProvider doesn't properly implement overrides (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288154">Bug 288154</a>. [perfs] Comments applied for performance tests may be obsolete (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288352">Bug 288352</a>. [Contributions] WorkbenchMenuService calling Display.syncExec() on disposed Display (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288364">Bug 288364</a>. [KeyBindings] Exporting key preferences to CSV does not warn of overwriting file (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288388">Bug 288388</a>. [ActivityMgmt] WorkbenchActivityHelper restrictArray is returning NULL for objects failing the test "restrictUseOf(Object)" (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288390">Bug 288390</a>. [Workbench] FileNotFoundException in test log makes it particularly unreadable (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288394">Bug 288394</a>. [MPE] MultiPageEditorSite does not remove properly its KeyBindingService (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288428">Bug 288428</a>. [DataBinding] Test failures in M20090902-0900 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289090">Bug 289090</a>. [CommonNavigator] labels are missing (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 01, 2009, 4:22 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
