Build submission for I20090916-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (September 16, 2009, 2:02 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288251">Bug 288251</a>. [CommonNavigator] Typo "overridding" used instead of "overriding" (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 14, 2009, 8:31 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
