--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,18 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (September 16, 2009, 2:02 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=87756">Bug 87756</a>. [Progress] Job name used as title of error dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=212721">Bug 212721</a>. [Change Sets] "Make changes Unassigned" visible when it shouldn't be (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=239003">Bug 239003</a>. Enable 'Apply Patch' everywhere (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263702">Bug 263702</a>. Branch creation problem in CVS (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282032">Bug 282032</a>. Radio button group not read correctly by JAWS (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287544">Bug 287544</a>. GlobalRefreshWizardSelectionPage and GlobalRefreshResourceSelectionPage use deprecated ResourceSorter (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287668">Bug 287668</a>. No need remember fDialog in PatchWizard, use getContainer() instead (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 25, 2009, 11:21 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
