--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (September 16, 2009, 2:40 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287107">Bug 287107</a>. Linked Source Project, NullpointerException in NewClassCodeGenerator (NEW)<br>
+  </p>
+
 <p>Integration Build (September 16, 2009, 2:02 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
