Fixed wrong entry.

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -15,7 +15,7 @@ JFace and Workbench</h1>
 <p>Integration Build (September 16, 2009, 2:40 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
-<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287107">Bug 287107</a>. Linked Source Project, NullpointerException in NewClassCodeGenerator (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286107">Bug 286107</a>. [ViewMgmt] [GlobalActions] Closing project ignores Saveables (FIXED)<br>
   </p>
 
 <p>Integration Build (September 16, 2009, 2:02 a.m.)</p>
