--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (September 22, 2009, 12:41 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=210627">Bug 210627</a>. Create Patch should sort diffs by file path (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289501">Bug 289501</a>. Bad position of "Details >>" button in "Overwrite Uncommitted Changes" dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289554">Bug 289554</a>. 'Restore Defaults' on 'Compare/Patch' > 'Text Compare' broken (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289727">Bug 289727</a>. If name of a Synchronize Participant is null set it to "Unknown" (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 16, 2009, 2:02 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
