*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (September 28, 2009, 3:51 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=208564">Bug 208564</a>. [Preferences] preferenceTransfer: Allow wildcards on keys (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263305">Bug 263305</a>. [Import/Export] Timestamps updated on archive export and on project import (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283120">Bug 283120</a>. [About] NPE on Configuration tab in Installation dialog when in a self-hosted Eclipse (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283555">Bug 283555</a>. [Markers] Configure Contents dialog: Types section should not have columns (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286542">Bug 286542</a>. Unnecessary line of code in ResourceEncodingFieldEditor (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 16, 2009, 2:40 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
