--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (September 29, 2009, 11:01 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273473">Bug 273473</a>. Button for copying changes in compare editor looks weird (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289501">Bug 289501</a>. Bad position of "Details >>" button in "Overwrite Uncommitted Changes" dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289552">Bug 289552</a>. 'Next Change' does not selected last small diff (button disabled) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=290123">Bug 290123</a>. [Wizards] Share Project wizard uses deprecated ParticipantPageSaveablePart (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 22, 2009, 12:41 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
