The map file has been updated for the following Bug changes: + Bug 290505. [Wizards] Show content changes in CVS Commit wizard using a compare viewer (FIXED) + Bug 290888. ISynchronizeView is not intended to be implemented by clients (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (October 06, 2009, 10:39 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=290505">Bug 290505</a>. [Wizards] Show content changes in CVS Commit wizard using a compare viewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=290888">Bug 290888</a>. ISynchronizeView is not intended to be implemented by clients (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 29, 2009, 11:01 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
