--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -16,6 +16,7 @@
 <ul>
   <li>Method addition: <code>public String generateLaunchConfigurationName(String namePrefix)</code> </li>
   <li>Method addition: <code>public boolean isValidLaunchConfigurationName(String configname) throws IllegalArgumentException</code> </li>
+  <li>Constant addition: <code>public static final String ATTR_PRIVATE</code></li>
 </ul>
 </p>
 <p><strong>Description: </strong>The <code>generateLaunchConfigurationName(String namePrefix)</code> method is a replacement for the traditional <code>generateUniqueLaunchConfigurationNameFrom(configname)</code> method - which has been deprecated. 
@@ -24,11 +25,14 @@ the method makes an effort to correct the name in one of two ways:
 <ul>
 <li>If an invalid name is given the configuration will be renamed to <code>launch_configuration</code></li>
 <li>Any invalid characters found will be replaced with <code>_</code></li>
-</ul></p>
-<p>
-The <code>isValidLaunchConfigurationName(String configname)</code> method is used to validate the specified configuration name and throws an <code>IllegalArgumentException</code>. This method provides
-the validation for the <code>generateLaunchConfigurationName(String namePrefix)</code> method.
+</ul>
+<strong>Action required:</strong> This is a backwards compatible change. No action required.
 </p>
+<p>
+<strong>Description:</strong> The <code>isValidLaunchConfigurationName(String configname)</code> method is used to validate the specified configuration name and throws an <code>IllegalArgumentException</code>. This method provides
+the validation forthe <code>generateLaunchConfigurationName(String namePrefix)</code> method.</p>
+<p><strong>Action required:</strong> This is a backwards compatible change. No action required. </p>
+<p><strong>Description:</strong> The <code>ATTR_PRIVATE</code> constant is a launch configuration attribute key used to identify whether a launch configuration should appear in the debug user interface (launch history, launch dialog, etc.). The value is a boolean. This attribute was previously defined in the debug UI plug-in, but was moved to core for headless plug-is that need to specify a value for this attribute. </p>
 <p><strong>Action required:</strong> This is a backwards compatible change. No action required. </p>
 
 <h3>DebugCommandAction base class</h3>
