--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (October 13, 2009, 12:26 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=124039">Bug 124039</a>. [Wizards] Show model sync in commit dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286371">Bug 286371</a>. Save changed password to secure storage immediately (CLOSED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289501">Bug 289501</a>. Bad position of "Details >>" button in "Overwrite Uncommitted Changes" dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=291492">Bug 291492</a>. [Sync View] Setting an ILabelDecorator for a model sync participant has no effect (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 06, 2009, 10:39 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
