*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 13, 2009, 8:29 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259357">Bug 259357</a>. [StatusHandling] Perspective registry hides message from WorkbenchException's status (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274262">Bug 274262</a>. [History] Allow to never prune history (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275477">Bug 275477</a>. [Markers] TasksView: Scope settings selects two (!) radio buttons (CLOSED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282535">Bug 282535</a>. [Markers] The Problem view does not update the status line (CLOSED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288769">Bug 288769</a>. [statushandling] can't deselect text (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288770">Bug 288770</a>. [statushandling] with multiple errors, top pane get space when resizing (bottom should get all the space) (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 06, 2009, 8:04 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
