*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,29 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 19, 2009, 3:13 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=199127">Bug 199127</a>. [Commands] ContentAssistCommandAdapter#setEnabled(..) does not update handler activation (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=254422">Bug 254422</a>. [FieldAssist] Provide a default API implementation of IContentProposal (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256651">Bug 256651</a>. [FieldAssist]  Wrong location calculation of proposal popup shell if content control is near bottom in the screen (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262022">Bug 262022</a>. [FieldAssist] ContentProposalAdapter.recomputeProposals might throw a NPE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274554">Bug 274554</a>. [Contributions] StatusLineManager: NullPointerException in setCanceled(...) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275393">Bug 275393</a>. [FieldAssist] Automate the manual test cases (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276164">Bug 276164</a>. [KeyBindings] Mac: Exporting keyboard preferences to CSV writes question marks instead of modifiers such as "Ctrl" and special keys like "Up" (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277886">Bug 277886</a>. [IDE] Remove manual start of org.eclipse.update.configurator (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=279553">Bug 279553</a>. [FieldAssist] ControlDecoration strange behavior when description text is empty string (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=280984">Bug 280984</a>. [Commands] org.eclipse.ui.commands extension point tells user to implement a subclass (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282653">Bug 282653</a>. [Markers] [ErrorHandling] Problems view: strange dialog if no quick fix is found (CLOSED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=284330">Bug 284330</a>. [JFace] Add isVisible API to ControlDecoration (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287454">Bug 287454</a>. [KeyBindings] F16-F19 unusable as shortcut keys in General -> Keys (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288804">Bug 288804</a>. [FieldAssist] [JFace] ContentProposalAdapter needs new setFocus() method (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=290834">Bug 290834</a>. [JFace] Unnecessary call in every saferunner invocation (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292396">Bug 292396</a>. Dependent options on 'Local History' preference page not indented (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292517">Bug 292517</a>. Resource Filter UI needs polish (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292525">Bug 292525</a>. [Markers] Code clean up in markers view. (NEW)<br>
+  </p>
+
 <p>Integration Build (October 13, 2009, 10:25 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
