--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (paüdziernik 20, 2009, 12:48 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=219570">Bug 219570</a>. [Sync View] "Link with Editor" for Synchronize view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289501">Bug 289501</a>. Bad position of "Details >>" button in "Overwrite Uncommitted Changes" dialog (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=291214">Bug 291214</a>. [Sync View] "Link with Editor" doesn't show current editor's input in model sync trees (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=291215">Bug 291215</a>. [Sync View] "Link with Editor" works poor for old style sync (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292539">Bug 292539</a>. [Sync View] Multiple nodes for a compilation unit in model sync (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 13, 2009, 12:26 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
