*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,19 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 22, 2009, 8:31 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=193600">Bug 193600</a>. [Commands] org.eclipse.ui.menus/menuContribution locationURI query placement "endof=..." not implemented? (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=250604">Bug 250604</a>. [FieldAssist]  API - ContentProposalAdapter needs isShowing() method (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=279758">Bug 279758</a>. [JFace] JFace font properties files should indicate that they must not be translated (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=280799">Bug 280799</a>. [Commands] ActivateEditorHandler unnecessarily calls setFocus() (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292517">Bug 292517</a>. Resource Filter UI needs polish (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292759">Bug 292759</a>. The "Edit Resource Filter" dialog doesn't populate the "Type" field (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292762">Bug 292762</a>. [Contributions] MenuUtil provides constants and static methods ... it should be marked noextend (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292901">Bug 292901</a>. Confusing "Target" group for children filters (NEW)<br>
+  </p>
+
 <p>Integration Build (October 19, 2009, 3:13 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
