--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 23, 2009, 3:29 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=190288">Bug 190288</a>. [About] Allow sorting by secondary column in plug-in details dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288766">Bug 288766</a>. [statushandling] initial size is small, could be a ratio of error content (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 22, 2009, 8:31 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
