--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,7 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
-<p>Integration Build (paüdziernik 20, 2009, 12:48 p.m.)</p>
+<p>Integration Build (October 26, 2009, 5:16 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260531">Bug 260531</a>. [compare] auto-indent not working as expected (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=291616">Bug 291616</a>. [Wizards] Commit dialog in Change Sets mode has to many context menu actions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292394">Bug 292394</a>. Additional dialog before Commit dialog comes up and makes the UI flickering/noisy (FIXED)<br>
+  </p>
+
+<p>Integration Build (pa?dziernik 20, 2009, 12:48 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
 <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=219570">Bug 219570</a>. [Sync View] "Link with Editor" for Synchronize view (FIXED)<br>
