*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 26, 2009, 12:35 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293132">Bug 293132</a>. [Import/Export] New filtered preference group is to far on the right (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293303">Bug 293303</a>. NPE when adding a Regular Expression with no matching string (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293305">Bug 293305</a>. [Markers] stack trace from stalled  ui tests on windows in I20091025-2000 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293310">Bug 293310</a>. NPE when adding a String Matcher with no matching string (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 23, 2009, 3:29 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
