*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 26, 2009, 8:23 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293305">Bug 293305</a>. [Markers] stack trace from stalled  ui tests on windows in I20091025-2000 (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 26, 2009, 12:35 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
