Update test documents

--- a/org.eclipse.ua.tests/non_junit/test_plan.htm
+++ b/org.eclipse.ua.tests/non_junit/test_plan.htm
@@ -39,12 +39,12 @@ defect and include the log.</p>
 
 <p  >Launch
 a fresh workbench. Make sure that Intro is automatically opened and is in full
-mode. </p>
+mode.</p>
 
 <p  >
 Test
-that root page come up/looks ok. Icons should be there. Hovering over icons
-causes the icons to show text describing them.</p>
+that root page come up/looks ok. Icons should be there. 
+Verify that the root page icons all have labels.</p>
 
 <p  >Test
 clicking on each of the links in the root page. Verify that on each page visited the
@@ -255,7 +255,7 @@ org.eclipse.ua.tests/extraView=true </span></p>
   <li>
 
 <p  >Download the eclipse automated tests and copy the plugin org.eclipse.ua.tests 
- into your Eclipse plugins directory.</p>
+ into your Eclipse dropins directory.</p>
 
   </li>
   <li>
@@ -373,10 +373,8 @@ deselect &quot;Development&quot;.</p>
   </li>
   <li>
 
-<p  >Re launch Help. Verify only one 
-book from Eclipse (Platform Plug-in Developer Guide) is displayed and &quot;Show All Topics&quot; button is not displayed.</p>
-
-  </li>
+<p  >Re launch Help. Make sure Show all topics is not selected.Verify only one 
+book from Eclipse (Platform Plug-in Developer Guide) is displayed.</li>
   <li>
 
 <p  >Open the book titled &quot;User Assistance Tests&quot;,</p>
