--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (October 28, 2009, 11:47 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293542">Bug 293542</a>. [Sync View] Link with Editor view menu has no mnemonic (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 26, 2009, 5:16 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
