*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 28, 2009, 12:52 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274554">Bug 274554</a>. [Contributions] StatusLineManager: NullPointerException in setCanceled(...) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286000">Bug 286000</a>. [FastView] NPE in FastViewPane$2.setState (was: File Search doesn't work in 3.5.0) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289988">Bug 289988</a>. Use IResource#setDerived(boolean, IProgressMonitor) instead of IResource#setDerived(boolean) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293553">Bug 293553</a>. Resource Filter UI needs mnemonic clean up (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293555">Bug 293555</a>. Disable Resource Filter decorator by default until new icon is available (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 26, 2009, 8:23 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
