--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (October 29, 2009, 10:53 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293600">Bug 293600</a>. Failure in StatusDialogManagerTest.testBug288765 (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 28, 2009, 12:52 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
