--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,11 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (November 02, 2009, 4:08 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+  </p>
+
 <p>Integration Build (October 30, 2009, 11:36 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
