--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (November 09, 2009, 4:02 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288767">Bug 288767</a>. [statushandling]no option to wrap error text (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294307">Bug 294307</a>. [ErrorHandling] StatusDialogManagerTest failure in N20091104-2000 (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (November 02, 2009, 4:08 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
