--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (November 10, 2009, 3:56 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286107">Bug 286107</a>. [ViewMgmt] [GlobalActions] Closing project ignores Saveables (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 02, 2009, 8:41 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
