Submission for 3.4.2 maintenance

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.3)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (listopad 13, 2009, 11:25 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283283">Bug 283283</a>. [WorkingSets] WorkingSetManager hides exception message (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294701">Bug 294701</a>. Backport of bug 283283 into 3.4.x is required (NEW)<br>
+  </p>
+
 <p>Integration Build (February 03, 2009, 2:10 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
