The map file has been updated for the following Bug changes: + Bug 273072. [Net] Provide native proxy support on x86_64 Linux (FIXED) + Bug 279111. ignored resources does not ignore folder patterns with path information. (WORKSFORME) + Bug 293085. UnixProxyProvider throwing "Too many open files" exception (FIXED) + Bug 293623. Patches with the created with the wizard contain deselected files (FIXED) + Bug 294338. UI string is missing a mnemonic, has wrong casing and has an unwanted dot (FIXED) + Bug 295112. Initial focus of PatchWizardDialog should be on the default button (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.team.ui
org.eclipse.team.tests.cvs.core
org.eclipse.team.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (November 17, 2009, 12:22 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273072">Bug 273072</a>. [Net] Provide native proxy support on x86_64 Linux (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=279111">Bug 279111</a>. ignored resources does not ignore folder patterns with path information. (WORKSFORME)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293085">Bug 293085</a>. UnixProxyProvider throwing "Too many open files" exception (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293623">Bug 293623</a>. Patches with the created with the wizard contain deselected files (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294338">Bug 294338</a>. UI string is missing a mnemonic, has wrong casing and has an unwanted dot (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295112">Bug 295112</a>. Initial focus of PatchWizardDialog should be on the default button (FIXED)<br>
+  </p>
+
 <p>Integration Build (October 28, 2009, 11:47 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
