--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (November 17, 2009, 4:52 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283283">Bug 283283</a>. [WorkingSets] WorkingSetManager hides exception message (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294462">Bug 294462</a>. [FieldAssist] ControlDecoration#showHoverText doesn't check if the widget is visible (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294702">Bug 294702</a>. Backport of bug 283283 into 3.5.x is required (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 10, 2009, 3:56 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
