--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,19 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (November 23, 2009, 3:59 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283449">Bug 283449</a>. [Jobs] Add ability to temporarily yield a Job so that blocked jobs are given a chance to execute. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286107">Bug 286107</a>. [ViewMgmt] [GlobalActions] Closing project ignores Saveables (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292354">Bug 292354</a>. Merge Groups UI from the e4 branch to HEAD (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292869">Bug 292869</a>. The Resource Filter dialogs and decorator should use icons made by UI designer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293130">Bug 293130</a>. Polishing the Filter extension point (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294118">Bug 294118</a>. [Contributions] toolbar control setWorkbenchWindow is not called (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294959">Bug 294959</a>. [Markers] Problems view shows outdated content (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295359">Bug 295359</a>. Filter Id should be required and specified per filter element (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 16, 2009, 4:46 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
