The map file has been updated for the following Bug changes: + Bug 273253. [ProjectSet] Importing a Project Set not uses existing repository locations any more (FIXED) + Bug 277375. NPE shutting down with compare editor open (ASSIGNED) + Bug 291695. Element compare fails to use source range (FIXED) + Bug 295688. NPEs in ProjectSetImporterTests in N20091118-2000 (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.core
org.eclipse.team.cvs.ui
org.eclipse.team.ui
org.eclipse.team.tests.cvs.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (November 24, 2009, 12:11 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273253">Bug 273253</a>. [ProjectSet] Importing a Project Set not uses existing repository locations any more (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277375">Bug 277375</a>. NPE shutting down with compare editor open (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=291695">Bug 291695</a>. Element compare fails to use source range (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295688">Bug 295688</a>. NPEs in ProjectSetImporterTests in N20091118-2000 (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 17, 2009, 12:22 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
