--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (December 01, 2009, 12:14 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=153429">Bug 153429</a>. JUnit4 in Eclipse Testing Framework (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 24, 2009, 12:11 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
