--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,25 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 03, 2009, 3:46 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=254422">Bug 254422</a>. [FieldAssist] Provide a default API implementation of IContentProposal (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275393">Bug 275393</a>. [FieldAssist] Automate the manual test cases (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=284265">Bug 284265</a>. [JFace] DialogSettings.save() silently ignores IOException (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292354">Bug 292354</a>. Merge Groups UI from the e4 branch to HEAD (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293658">Bug 293658</a>. [About] About dialog's installation details does not honour dialog font settings (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294462">Bug 294462</a>. [FieldAssist] ControlDecoration#showHoverText doesn't check if the widget is visible (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294810">Bug 294810</a>. [DataBinding] WidgetProperties.focused() does not update properly (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295386">Bug 295386</a>. [FieldAssist] ControlDecoration#showHoverText doesn't check if the widget is visible (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296473">Bug 296473</a>. [Filters] Replace #getProject and #getPath with #getResource in IResourceFilterDescription (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296477">Bug 296477</a>. [EditorMgmt] IWorkbenchPage#openEditors(IEditorInput[], ..) does not set keyboard focus (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296566">Bug 296566</a>. Use "subtle" icon decorators for Virtual Folders (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296640">Bug 296640</a>. Add keywords to help find MRU length preference (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296695">Bug 296695</a>. [Markers] Problems view does not update on selection change (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296822">Bug 296822</a>. NullProgressMonitor is not thread safe for expected usage (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 30, 2009, 3:54 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
