--- a/bundles/org.eclipse.ui.ide/about.html
+++ b/bundles/org.eclipse.ui.ide/about.html
@@ -28,11 +28,11 @@ and such source code may be obtained at <a href="http://www.eclipse.org">http://
 
 <p>The Content includes items that have been sourced from third parties as set out below. If you did not
 receive this Content directly from the Eclipse Foundation, the following is provided for informational
-purposes only, and you should look to the Redistributor?s license for terms and conditions of use.</p>
+purposes only, and you should look to the Redistributor&rsquo;s license for terms and conditions of use.</p>
 
 <h4>C++ Standard Template Library</h4>
 <p>
-This plugin contains a Java port of the code for the STL heap sorting algprithm. The original code can
+This plugin contains a Java port of the code for the STL heap sorting algorithm. The original code can
 be found at:
 <ul>
 <a href="http://www.sgi.com/tech/stl/stl_heap.h">http://www.sgi.com/tech/stl/stl_heap.h</a> 
