--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (December 07, 2009, 1:06 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296694">Bug 296694</a>. Removing a synchronization when 'Link with Editor' is enabled throws NPE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296724">Bug 296724</a>. SyncInfoCompareInput uses '@noextend' which is unsupported on final classes (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 01, 2009, 12:14 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
