The map file has been updated for the following Bug changes: + Bug 296580. [compare] Java Compare Editor: 'Copy Current Change from Right to Left' garbles contents (FIXED)
The following projects have changed:
org.eclipse.compare

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (December 07, 2009, 5:12 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296580">Bug 296580</a>. [compare] Java Compare Editor: 'Copy Current Change from Right to Left' garbles contents (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 07, 2009, 1:06 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
