--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 07, 2009, 12:32 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273806">Bug 273806</a>. [GlobalActions] [KeyBindings] Shortcut key for properties should be changed to Cmd+I on Mac? (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289176">Bug 289176</a>. [KeyBindings] Wrong keybinding for Redo in Mac (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296566">Bug 296566</a>. Use "subtle" icon decorators for Virtual Folders (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (December 04, 2009, 3:31 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
