--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 07, 2009, 4:09 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296573">Bug 296573</a>. [Viewers] TreeViewer.remove() fails to remove a visible element at index 0 before it is materialized (NEW)<br>
+  </p>
+
 <p>Integration Build (December 07, 2009, 12:32 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
